.kubernetes/templates/server/4.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: "%NAMESPACE%"
  name: %NAMESPACE%-server
  labels:
    app: %NAMESPACE%-server
spec:
  selector:
    app: %NAMESPACE%-server
  ports:
    - name: '%SERVER_PORT%'
      protocol: TCP
      port: %SERVER_PORT%
      targetPort: %SERVER_PORT%
  type: ClusterIP
